--- a/waffle-example-rest/pom.xml
+++ b/waffle-example-rest/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>io.github.daniezcoding</groupId>
+		<groupId>io.github.cloudoas</groupId>
 		<artifactId>waffle-example</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
